# m20pro-ros2-sim

./: .gitignore  README.md  m20pro-VLA.md  m20pro日志.md
assets/: __init__.py
assets/m20pro/: __init__.py  m20pro_cfg.py
configs/: m20_visible_objectnav_scenarios_v1.json  m20pro_vla_eval_v1.yaml
scripts/: 104_start_web.sh  README.md  activate_smolvla_env.sh  activate_vla_env.sh  audit_m20_smolvla_data.py  audit_m20_smolvla_data.sh  benchmark_m20pro_envs.sh  build_m20_objectnav_manifest.py  check_m20pro_gym_registration.py  check_m20pro_task.py  check_smolvla.py  check_smolvla.sh  check_vla_env.sh  collect_m20_visible_objectnav.sh  collect_m20_visible_objectnav_batch.sh  convert_m20_mjcf.py  convert_m20_mjcf.sh  convert_m20_objectnav_to_lerobot.py  convert_m20_objectnav_to_lerobot.sh  convert_m20pro_urdf.sh  convert_videos_to_h264.py  eval_m20_smolvla_objectnav_offline.py  eval_m20_smolvla_objectnav_offline.sh  extract_m20_smolvla_dagger_prefixes.py  install_vla_env.sh  m20_indoor_scenarios.py  m20_vla_model.py  m20_vla_skill_model.py  play_m20_retargeted.py  play_m20_retargeted.sh  play_m20_smolvla_objectnav.sh  play_m20_vla_bc.py  play_m20_vla_bc.sh  play_m20_vla_skill.py  play_m20_vla_skill.sh  play_m20pro_ppo.py  play_m20pro_ppo.sh  play_public_go1_parkour.py  play_public_go1_parkour.sh  play_public_m20_policy.py  (+37 more)
src/m20pro_bringup/: CMakeLists.txt  package.xml
src/m20pro_bringup/behavior_trees/: m20pro_navigate_to_pose_backup_first.xml  m20pro_navigate_to_pose_foxy.xml
src/m20pro_bringup/config/: inspection_waypoints.yaml  m20pro.yaml  map_manifest.yaml  nav2_params.yaml  nav2_params_foxy.yaml
src/m20pro_bringup/launch/: m20pro.launch.py  m20pro_real.launch.py  m20pro_sim.launch.py  m20pro_web_dashboard.launch.py
src/m20pro_bringup/rviz/: m20pro_sim.rviz
src/m20pro_bringup/scripts/: m20pro_record_real.sh
src/m20pro_cloud_bridge/: package.xml
src/m20pro_cloud_bridge/m20pro_cloud_bridge/: web_dashboard_node.py
src/m20pro_description/: package.xml
src/m20pro_inspection/: package.xml  setup.cfg  setup.py
src/m20pro_inspection/config/: yolov8_inspection.yaml
src/m20pro_inspection/launch/: m20pro_inspection.launch.py
src/m20pro_inspection/m20pro_inspection/: yolov8_inspection_node.py
src/m20pro_inspection/models/: README.md
src/m20pro_inspection/resource/: m20pro_inspection
src/m20pro_navigation/: setup.py
src/m20pro_navigation/m20pro_navigation/: config_audit_node.py  dynamic_obstacle_simulator.py  floor_goal_bridge.py  pointcloud_fusion.py  sim_bridge_node.py  tcp_bridge_node.py
tasks/m20pro_locomotion/: __init__.py  jump_env.py  jump_env_cfg.py  m20pro_locomotion_env.py  m20pro_locomotion_env_cfg.py
tasks/m20pro_locomotion/agents/: __init__.py  rsl_rl_ppo_cfg.py
tools/: collect_ros_snapshot.sh
