<?xml version="1.0"?>
<package format="3">
  <name>m20pro_description</name>
  <version>0.1.0</version>
  <description>URDF and meshes for the DEEP Robotics M20 Pro.</description>
  <maintainer email="user@example.com">M20Pro Developer</maintainer>
  <license>LicenseRef-DeepRobotics-Proprietary</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
