<?xml version="1.0"?>
<package format="3">
  <name>m20pro_inspection</name>
  <version>0.1.0</version>
  <description>Inspection perception nodes for the DEEP Robotics M20 Pro.</description>
  <maintainer email="user@example.com">M20Pro Developer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
